Fix spacings between certain elements

--- a/Health-Compass/resources/css/app.css
+++ b/Health-Compass/resources/css/app.css
@@ -165,6 +165,12 @@ nav ul li a:hover::after {
     border-bottom: 2px dashed var(--nav-color);
 }
 
+#activity_stats img,
+#last_activity_stats img {
+    object-fit: contain;
+    cursor: default;
+}
+
 #activity {
     margin-top: 2rem;
 }
@@ -181,17 +187,17 @@ nav ul li a:hover::after {
 
 #activity p,
 #activityDuration p,
-#kcalBurned p,
-#notes {
-    margin: auto 1rem;
+#kcalBurned p {
+    margin: auto;
     color: var(--text-color);
+    padding-top: 0.5rem;
 } 
 
 #activity_stats form button,
 #last_activity_stats form button {
     background: transparent;
     font-size: 1rem;
-    margin: 0 0 2rem 8rem;
+    margin: 0 0 2rem 5rem;
     border: none;
     cursor: pointer;
     width: 6rem;
@@ -282,8 +288,8 @@ nav ul li a:hover::after {
 /* Kcal count */
 
 #kcalCount {
-    grid-column:1/3;
-    grid-row:3/5;
+    grid-column:1/4;
+    grid-row:3;
     background: var(--header-color);
     border-radius: 5px;
     box-shadow: 0px 0px 5px 2px var(--nav-color);
@@ -305,7 +311,7 @@ nav ul li a:hover::after {
     border-radius: 5px;
     box-shadow: 0px 0px 5px 2px var(--nav-color);
     font-family: var(--content-font);
-    font-size: var(--content-font-size);
+    font-size: 2rem;
     display:flex;
     flex-direction: column;
 }
@@ -363,7 +369,7 @@ nav ul li a:hover::after {
     display: flex;
     flex-direction: column;
     grid-column:10/13;
-    grid-row:2/6;
+    grid-row:2/4;
 
     background: var(--header-color);
     border-radius: 5px;
